--- a/Medias_DMO/app/src/main/AndroidManifest.xml
+++ b/Medias_DMO/app/src/main/AndroidManifest.xml
@@ -9,6 +9,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Medias_DMO">
+        <activity android:name=".view.MediaHarmonicaActivity">
+
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".view.MainActivity" />
+        </activity>
+        <activity android:name=".view.MediaPonderadaActivity" />
+
+        <activity android:name=".view.MediaAritimeticaActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".view.MainActivity" />
+        </activity>
         <activity android:name=".view.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
